# AutoconfGnuplotMacro

./: Makefile.am  README  configure.ac
m4/: ax_ffmpeg.m4  ax_ffmpeg.m4.annotated  ax_ffmpeg_min_version.m4.annotated  ax_gnuplot.m4
m4/annotated/: ax_ffmpeg.m4.annotated  ax_gnuplot.m4.annotated
